--- a/Python_Loops.ipynb
+++ b/Python_Loops.ipynb
@@ -115,7 +115,8 @@
    "source": [
     "\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "# The for loop\n",
+    "# The while loop"
    ]
   },
   {
@@ -143,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "1aa7533a",
    "metadata": {
     "deletable": false,
@@ -159,11 +160,32 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1  is odd\n",
+      "2  is even\n",
+      "3  is odd\n",
+      "4  is even\n",
+      "5  is odd\n",
+      "6  is even\n",
+      "7  is odd\n",
+      "8  is even\n",
+      "9  is odd\n",
+      "10  is even\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "for i in range(1, 11):\n",
+    "    if i % 2==0:\n",
+    "        print(i, \" is even\")\n",
+    "    else:\n",
+    "        print(i, \" is odd\")"
    ]
   },
   {
@@ -192,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "9e8f1860",
    "metadata": {
     "deletable": false,
@@ -208,12 +230,23 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[5.0, 32.84, 21.54, 16.6, 68.42]\n"
+     ]
+    }
+   ],
    "source": [
     "float_list = [2.5, 16.42, 10.77, 8.3, 34.21]\n",
     "\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "for i in range(0, len(float_list)):  \n",
+    "    float_list[i] = float_list[i] * 2\n",
+    "\n",
+    "print(float_list)"
    ]
   },
   {
@@ -244,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "78bb43a2",
    "metadata": {
     "deletable": false,
@@ -260,12 +293,26 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
    "source": [
     "float_list = [2.5, 16.42, 10.77, 8.3, 34.21]\n",
     "\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "count_greater = 0\n",
+    "\n",
+    "for num in float_list:  \n",
+    "    if num > 10:\n",
+    "        count_greater += 1\n",
+    "\n",
+    "print(count_greater)"
    ]
   },
   {
@@ -293,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "8bcc51bf",
    "metadata": {
     "deletable": false,
@@ -309,13 +356,26 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "23 27\n",
+      "27 23\n"
+     ]
+    }
+   ],
    "source": [
     "n = 50\n",
     "num_list = [10, 4, 23, 6, 18, 27, 47]\n",
     "\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "for n1 in num_list:\n",
+    "    for n2 in num_list: \n",
+    "        if(n1 != n2):\n",
+    "            if(n1 + n2 == n):\n",
+    "                print(n1, n2)"
    ]
   },
   {
@@ -365,7 +425,9 @@
    "source": [
     "\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "#Break - used to exit a loop before it reaches the end.\n",
+    "# Continue - is used to continue on to the next iteration\n",
+    "# Pass - allows code to pass through, used as an indicator to write more code later on"
    ]
   },
   {
@@ -472,7 +534,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.9.12 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -486,7 +548,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.9.12"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "9edeca7d1d4d1a4f7c19c13b38d959952ed304826e323748d54667ada2a316d5"
+   }
   }
  },
  "nbformat": 4,
